force-app/main/default/objects/Hotel_Stay_Detail__c/Hotel_Stay_Detail__c.object-meta.xml
<CustomObject>
    <description>以天为单位遍历更新入住详情</description>
    <label>Hotel Stay Detail</label>
    <nameField>
        <label>Hotel Stay Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Stay Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>