force-app/main/default/objects/Hotel_Stay_Detail__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Hotel Stay Details</relationshipLabel>
    <relationshipName>Hotel_Stay_Details</relationshipName>
    <type>Lookup</type>
</CustomField>