force-app/main/default/objects/Hotel_Stay_Detail__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>Text(Residents__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>