force-app/main/default/objects/Hotel_Stay_Detail__c/fields/Roomie__c.field-meta.xml
<CustomField>
    <fullName>Roomie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>室友</description>
    <inlineHelpText>室友</inlineHelpText>
    <label>Roomie</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Hotel Stay Details (Roomie)</relationshipLabel>
    <relationshipName>Hotel_Stay_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>